// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cellInfoReducer Updates cell info state on focus action 1`] = `
Object {
  "focus": Object {
    "key": "GENE1",
    "store": "genes",
  },
  "groupedTracks": ["louvain"],
  "selectedTracks": Array [
    "louvain",
  ],
}
`;

exports[`cellInfoReducer Updates cell info state on unfocus action 1`] = `
Object {
  "focus": Object {
    "key": null,
    "store": null,
  },
  "groupedTracks": ["louvain"],
  "selectedTracks": Array [
    "louvain",
  ],
}
`;

exports[`cellInfoReducer Updates cell info state on update action 1`] = `
Object {
  "cellName": "C1",
  "expression": 1,
  "focus": Object {
    "key": "louvain",
    "store": "cellSets",
  },
  "geneName": "G1",
  "groupedTracks": ["louvain"],
  "selectedTracks": Array [
    "louvain",
  ],
}
`;
